# typex-lang

./: .gitignore  AI_DISCLOSURE.md  Cargo.toml  ORIGINAL_THOUGHTS.md  README.md  TYPEX_SUMMARY.md
.github/workflows/: ci.yml  release.yml
crates/typex_ast/: Cargo.toml
crates/typex_ast/src/: lib.rs
crates/typex_cli/: Cargo.toml
crates/typex_cli/src/: main.rs  pretty.rs  txc.rs  txs.rs
crates/typex_codegen/: Cargo.toml
crates/typex_codegen/runtime/: txruntime.c
crates/typex_codegen/src/: lib.rs
crates/typex_hir/: Cargo.toml
crates/typex_ir/: Cargo.toml
crates/typex_lexer/: Cargo.toml
crates/typex_lexer/src/: lib.rs
crates/typex_lsp/: Cargo.toml
crates/typex_lsp/src/: main.rs
crates/typex_parser/: Cargo.toml
crates/typex_parser/src/: lib.rs
crates/typex_resolve/: Cargo.toml
crates/typex_resolve/src/: lib.rs
crates/typex_runtime/: Cargo.toml
crates/typex_runtime/src/: lib.rs
crates/typex_span/: Cargo.toml
crates/typex_span/src/: lib.rs
crates/typex_std/: Cargo.toml
crates/typex_std/src/: lib.rs
crates/typex_typecheck/: Cargo.toml
crates/typex_typecheck/src/: lib.rs
crates/typex_vm/: Cargo.toml
crates/typex_vm/src/: lib.rs
docs/: STDLIB.md
examples/: args.tx  bad.tx  csv_parser.tx  debug.tx  env.tx  fibonacci.tx  foo.tx  for_array.tx  for_object.tx  hello.tx  imports.tx  kitchen_sink.tx  length.tx  lsp_errors.tx  multiarg.tx  output.txt  ping.tx  readline.tx  reassign.tx  stdlib.tx  switch.tx  test.csv
vscode-typex/: language-configuration.json  package-lock.json  package.json  tsconfig.json
vscode-typex/snippets/: typex.json
vscode-typex/src/: extension.ts
vscode-typex/syntaxes/: typex.tmLanguage.json
